--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "leaflet": "^0.7.7",
     "qwest": "^2.2.6",
     "react": "0.14.4",
-    "react-dom": "0.14.4"
+    "react-dom": "0.14.4",
+    "babyparse": "0.4.6"
   }
 }
